gcc/testsuite/gdc.test/compilable/autoreflambda.d
alias f = (auto ref int x) {};
