gcc/testsuite/gdc.test/fail_compilation/fail8313.d
auto bar()(int x){return x;}
auto bar()(int x = bar()){return x;}
static assert(bar(1));
